# rlbot-deep-rl

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/rewards/: advanced.yaml  early_stage.yaml  middle_stage.yaml
configs/training/: ppo_1v1.yaml  ppo_2v2.yaml  ppo_3v3.yaml
rlbot/: agent.py  bot.py  bot.toml
scripts/: cli.py  evaluate.py  parse_replays.py  train.py  wandb_inspect.py  watch.py
src/rlbot_agent/: __init__.py
src/rlbot_agent/algorithms/: __init__.py
src/rlbot_agent/algorithms/imitation/: __init__.py  behavioral_cloning.py
src/rlbot_agent/algorithms/ppo/: __init__.py  buffer.py  gae.py  loss.py  ppo.py
src/rlbot_agent/core/: __init__.py  config.py  registry.py  types.py
src/rlbot_agent/deployment/: __init__.py  agent.py  inference.py
src/rlbot_agent/environment/: __init__.py  factory.py  self_play_env.py
src/rlbot_agent/environment/action_parsers/: __init__.py  base.py  multi_discrete.py
src/rlbot_agent/environment/conditions/: __init__.py  goal.py  no_touch.py  timeout.py
src/rlbot_agent/environment/obs_builders/: __init__.py  advanced_obs.py  base.py
src/rlbot_agent/environment/rewards/: __init__.py  ball_rewards.py  base.py  combined.py  game_rewards.py  (+2 more)
src/rlbot_agent/models/: __init__.py  actor_attention_critic.py  distributions.py
src/rlbot_agent/replay_analysis/: __init__.py  dataset.py  parser.py
src/rlbot_agent/training/: __init__.py  coordinator.py  env_stats.py  learner.py  parallel_env.py  policy_pool.py  worker.py
tests/: __init__.py  conftest.py
tests/test_algorithms/: __init__.py  test_ppo.py
tests/test_environment/: __init__.py  test_action_parser.py  test_obs_builder.py
tests/test_models/: test_actor_attention_critic.py
(+16 files in other folders)
